See <<listener-error-handlers>> for more information.

You can now modify `@KafkaListener` annotations during application initialization.
See <<kafkalistener-attrs>> for more information.

[[x27-dlt]]
==== `DeadLetterPublishingRecover` Changes

Now, if both the key and value fail deserialization, the original values are published to the DLT.
Previously, the value was populated but the key `DeserializationException` remained in the headers.
There is a breaking API change, if you subclassed the recoverer and overrode the `createProducerRecord` method.

In addition, the recoverer verifies that the partition selected by the destination resolver actually exists before publishing to it.

See <<dead-letters>> for more information.

[[x27-CKTM]]
==== `ChainedKafkaTransactionManager` is Deprecated

See <<transactions>> for more information.

[[x27-RKT]]
==== `ReplyingKafkaTemplate` Changes

There is now a mechanism to examine a reply and fail the future exceptionally if some condition exists.

Support for sending and receiving `spring-messaging` `Message<?>` s has been added.

See <<replying-template>> for more information.

[[x27-streams]]
==== Kafka Streams Changes

By default, the `StreamsBuilderFactoryBean` is now configured to not clean up local state.
See <<streams-config>> for more information.

[[x27-admin]]
==== `KafkaAdmin` Changes

New methods `createOrModifyTopics` and `describeTopics` have been added.
`KafkaAdmin.NewTopics` has been added to facilitate configuring multiple topics in a single bean.
See <<configuring-topics>> for more information.

[[x27-conv]]
==== `MessageConverter` Changes

It is now possible to add a `spring-messaging` `SmartMessageConverter` to the `MessagingMessageConverter`, allowing content negotiation based on the `contentType` header.
See <<messaging-message-conversion>> for more information.

[[x27-sequencing]]
==== Sequencing `@KafkaListener` s

See <<container-sequencing>> for more information.