@@ -99,3 +99,9 @@ See <<messaging-message-conversion>> for more information.
 ==== Sequencing `@KafkaListener` s
 
 See <<container-sequencing>> for more information.
+
+[[x27-exp-backoff]]
+==== `ExponentialBackOffWithMaxRetries`
+
+A new `BackOff` implementation is provided, making it more convenient to configure the max retries.
+See <<exp-backoff>> for more information.
